--- a/机器翻译.md
+++ b/机器翻译.md
@@ -1,6 +1,13 @@
-word2vec https://zhuanlan.zhihu.com/p/26306795
-         https://www.cnblogs.com/pinard/p/7160330.html
-         
-paddle机器翻译 https://www.paddlepaddle.org.cn/documentation/docs/zh/1.5/beginners_guide/basics/machine_translation/index.html
+word2vec ：
 
-机器翻译名词解释 https://blog.csdn.net/u014732537/article/details/81206267
+https://zhuanlan.zhihu.com/p/26306795
+
+https://www.cnblogs.com/pinard/p/7160330.html
+         
+paddle机器翻译：
+
+https://www.paddlepaddle.org.cn/documentation/docs/zh/1.5/beginners_guide/basics/machine_translation/index.html
+
+机器翻译名词解释：
+
+https://blog.csdn.net/u014732537/article/details/81206267
