--- a/优化器.md
+++ b/优化器.md
@@ -46,8 +46,8 @@ c. MBGD（Min-Batch Gradient Descent）小批量梯度下降
 
 **2. 挑战**
 
-a. learning rate 固定，小了训练慢，大了不收敛
-b. 局部最优和鞍点
+- learning rate 固定，小了训练慢，大了不收敛
+- 局部最优和鞍点
 
 **3. 自适应梯度下降法**
 
@@ -55,13 +55,16 @@ b. 局部最优和鞍点
 >
 > 数据稀疏时用自适应算法好，因为0项多的话，用sgd求得的梯度可能是0
 
-a. Adam
-b. 动量
+- Adam
+- 动量
 
 优点：
 
 - 自适应收敛快，sgd收敛缓慢
 
-参考：https://www.cnblogs.com/guoyaohua/p/8542554.html
-     http://fyubang.com/2019/08/10/optimizer_sgd/
+参考：
+
+https://www.cnblogs.com/guoyaohua/p/8542554.html
+
+http://fyubang.com/2019/08/10/optimizer_sgd/
      
