--- a/优化器.md
+++ b/优化器.md
@@ -47,7 +47,7 @@ c. MBGD（Min-Batch Gradient Descent）小批量梯度下降
 **2. 挑战**
 
 - learning rate 固定，小了训练慢，大了不收敛
-- 局部最优和鞍点
+- 局部最优（驻点）和鞍点
 
 **3. 自适应梯度下降法**
 
@@ -68,3 +68,38 @@ https://www.cnblogs.com/guoyaohua/p/8542554.html
 
 http://fyubang.com/2019/08/10/optimizer_sgd/
      
+
+### 二、陷入局部最优的几种解决方案
+
+https://blog.csdn.net/Touch_Dream/article/details/70142482
+
+> 首先知道一点，目前并没有什么方法能够保证找到非凸函数的全局最优解
+
+**1. 设置不同的初始权重**
+
+> 即改变起始位置
+
+**2. 模拟退火**
+> 模拟退火的原理是每一步都以一定的概率接受比当前解更差的结果，从而有助有跳出驻点
+> 当然，为了保证算法的稳定性，不能每次都跳出来，所以每次迭代后，接受次优解的概率随时间推移慢慢降低。
+
+**3. 通过调大学习率跳出驻点**
+https://blog.csdn.net/Touch_Dream/article/details/70142482
+a. 当前位置起跳
+b. 历史最优起跳
+
+**4. SGD**
+因为每一次更新方向并不是全局最优，带有随机性
+
+
+
+### 三、权重初始化方法
+
+> 主要有5中方法
+
+- 全零初始化
+- 随机初始化
+- Xavier 初始化（泽维尔初始化）
+- He 初始化
+- 与训练初始化（ImageNet，词向量的fune-tuning等）
+
