Update and rename 优化器.md to 优化器_局部最优.md

--- a/优化器_局部最优.md
+++ b/优化器_局部最优.md
@@ -1,4 +1,4 @@
-> 主要内容:优化器、局部最优的解决方案、初始化方式
+> 主要内容:优化器、局部最优的解决方案
 
 ### 一、优化器
 
@@ -92,34 +92,3 @@ b. 历史最优起跳
 
 **4. SGD**
 因为每一次更新方向并不是全局最优，带有随机性
-
-
-
-### 三、权重初始化方法
-
-> 原理：使得输入和输出数据服从相同的分布（高斯或均匀）
-> 严格的讲，我们希望参数的均值为0，输入数据和输出数据方差一致
->
-> 主要有5中方法
->
-> https://blog.csdn.net/mzpmzk/article/details/79839047
->
-> https://blog.csdn.net/u012328159/article/details/80025785
-
-- 全零初始化
-> 应用在线性回归、logistics回归时还行，但在神经网络重视不可以的
-> 这样每一层学到的东西都是一样的（输出一样），没有意义
-
-- 随机初始化
-
-- Xavier 初始化（泽维尔初始化）
-> 针对tanh、sigmod
-
-- He 初始化（何凯明初始化）（或叫做MSRA初始化）
-> 针对relu
-
-- 预训练初始化（ImageNet，词向量的fune-tuning等）
-
-> 适用于relu
-
-
