--- a/权重初始化_梯度消失_爆炸.md
+++ b/权重初始化_梯度消失_爆炸.md
@@ -1,5 +1,3 @@
-> 主要涉及权重的初始化方式
-
 ### 三、权重初始化方法
 
 > 原理：使得输入和输出数据服从相同的分布（高斯或均匀）
@@ -57,3 +55,28 @@ y~i~=f(z~i~)=f(w~i~x~i~+b~i~)，其中 f 为sigmod函数。
 当w较大时，|$\sigma'(z)w$|<1，梯度越来越大，直到爆炸
 
 > 所以权重初始化很重要
+
+
+
+### 五、梯度消失和梯度爆炸的解决方案
+https://blog.csdn.net/qq_25737169/article/details/78847691
+
+**1. 针对梯度爆炸的**
+
+- 梯度裁剪
+> 原理是设置一个阈值，对梯度做一个限制
+
+- 正则损失
+> Loss = (y-Wx)² + a||W||²
+> 如果发生梯度爆炸，||W||会很大，因为要最小化 Loss，所以反过来抑制之。
+
+**2. 针对两者的**
+
+- relu 函数
+> 大于1部分导数恒为1，那么梯度就只跟W有关，保证W分布稳定的话，每一层的的更新速度相同
+
+- BN
+- 残差网络
+- LSTM
+
+
