--- a/机器翻译.md
+++ b/机器翻译.md
@@ -13,3 +13,8 @@ https://www.paddlepaddle.org.cn/documentation/docs/zh/1.5/beginners_guide/basics
 机器翻译名词解释：
 
 https://blog.csdn.net/u014732537/article/details/81206267
+
+BeamSearch:集束搜索/柱搜索
+> beam search的方法只用在测试的情况（decoder解码的时候），因为在训练过程中，每一个decoder的输出是有正确答案的，也就不需要beam search去加大输出的准确率。
+
+https://blog.csdn.net/pipisorry/article/details/78404964
