--- a/机器翻译.md
+++ b/机器翻译.md
@@ -5,6 +5,8 @@ https://zhuanlan.zhihu.com/p/26306795
 https://www.cnblogs.com/pinard/p/7160330.html
 
 https://blog.csdn.net/weixin_40240670/article/details/81203428
+
+CBOW 多个词向量的累加作为输入
          
 paddle机器翻译：
 
