--- a/优化器_局部最优.md
+++ b/优化器_局部最优.md
@@ -1,6 +1,6 @@
 > 主要内容:优化器、局部最优的解决方案
 
-### 一、优化器
+## 一、优化器
 
 **1. 三种常见的优化器**
 
@@ -71,11 +71,15 @@ https://www.cnblogs.com/guoyaohua/p/8542554.html
 http://fyubang.com/2019/08/10/optimizer_sgd/
      
 
-### 二、陷入局部最优的几种解决方案
+## 二、陷入局部最优的几种解决方案
 
 https://blog.csdn.net/Touch_Dream/article/details/70142482
 
 > 首先知道一点，目前并没有什么方法能够保证找到非凸函数的全局最优解
+>
+> 此外，如果维数够高，并不存在什么鞍点，总有一个方向是往下的
+> 
+> 那么局部最优就只能发生在谷底
 
 **1. 设置不同的初始权重**
 
@@ -92,3 +96,20 @@ b. 历史最优起跳
 
 **4. SGD**
 因为每一次更新方向并不是全局最优，带有随机性
+
+## Q & A
+
+**a. 为什么有batch后还可以用sgd？**
+
+> sgd中也有batch_size，可能是为了方便代码的重构，把优化器改为mini_batch
+>
+> - batchsize：批大小。在深度学习中，一般采用SGD训练，即每次训练在训练集中取batchsize个样本训练；
+>
+> - iteration：1个iteration等于使用batchsize个样本训练一次；
+>
+> - epoch：1个epoch等于使用训练集中的全部样本训练一次；
+>
+> - iteration：1个iteration等于使用batchsize样本训练一次；
+>
+> adam 到底用sgd还是mini-batch，目前尚未知，应该使用mini-batch
+
