--- a/注意力机制.md
+++ b/注意力机制.md
@@ -10,3 +10,5 @@ $softmax(qK^{T})V$
 如果是self Attention，即 q 来自 K 中的某个词，则得到 q 的新表达，这个表达等于 K 中所有词的加权和
 
 如果是encoder-decoder Attention，即 q 不是 K 中的词，则得到 q 的下一个预测，这个预测等于 K 中所有词的加权和
+
+最终长度和Q的长度一致
