--- a/注意力机制.md
+++ b/注意力机制.md
@@ -12,3 +12,12 @@ $softmax(qK^{T})V$
 如果是encoder-decoder Attention，即 q 不是 K 中的词，则得到 q 的下一个预测，这个预测等于 K 中所有词的加权和
 
 最终长度和Q的长度一致
+
+# Attention 优势
+
+对于RNN
+- 远距离依赖
+- 训练速度（注意，不是测试速度）
+
+对于CNN
+- 感受野
