--- a/语音预知识.md
+++ b/语音预知识.md
@@ -19,8 +19,8 @@ MFCC特征向量描述了一帧语音信号的功率谱的包络信息
 声谱图中看共振峰：
 ![SpectrogramFormants](SpectrogramFormants.jpeg)
 
-声谱图中看共振峰：
-![SpectrumFormants](SpectrumFormants.jpeg)
+频谱图中看共振峰：
+![SpectrumFormants](spectrumFormants.jpeg)
 
 
 
