--- a/注意力机制.md
+++ b/注意力机制.md
@@ -28,3 +28,10 @@ $softmax(qK^{T})V$
 # Attention 劣势
 
 - 位置信息
+
+# [attention矩阵](https://www.cnblogs.com/robert-dlut/p/5952032.html)
+
+说简单点呢就是softmax(QK^T^)
+详细一点呢就是如图：
+![](attentionMatrix1.png)
+![](attentionMatrix2.png)
