--- a/语音预知识.md
+++ b/语音预知识.md
@@ -56,3 +56,7 @@ X[k'] = X[Mel(k)]，这里，原始线性谱表示为X[k]
 Mel 的好处：在Mel频域内，人对音调（即频率）的感知度为线性关系。举例来说，如果两段语音的Mel频率相差两倍，则人耳听起来两者的音调也相差两倍。
 
 关键词：[声道的形状](http://fancyerii.github.io/books/mfcc/#deltas%E5%92%8Cdelta-deltas%E7%89%B9%E5%BE%81)：语音的产生过程如下：语音信号是通过肺部呼出气体，然后通过声门的开启与闭合产生的周期信号。再通过声道（包括舌头牙齿）对信号调制后产生。区分语音的关键就是声道的不同形状。不同的形状就对应不同的滤波器，从而产生了不同的语音。如果我们可以准确的知道声道的形状，那么我们就可以得到不同的音素(phoneme)的表示。声道的形状体现在语音信号短时功率谱的包络(envelope)中，因此好多特征提取方法需要准确的表示包络信息。
+
+
+[对语音信号的采样和重采样(Matlab)](https://zhuanlan.zhihu.com/p/31917473)
+
