--- a/注意力机制.md
+++ b/注意力机制.md
@@ -1,6 +1,7 @@
 # Attention 的深入理解
 
 [transformer结构理解（包括位置编码）](https://kexue.fm/archives/4765)
+[有趣的transformer(multi head)](http://skyhigh233.com/blog/2017/07/21/transformer/)
 
 > 注意力就是一个加权和
 
