--- a/注意力机制.md
+++ b/注意力机制.md
@@ -1,7 +1,8 @@
 # Attention 的深入理解
 
-[transformer结构理解（包括位置编码）](https://kexue.fm/archives/4765)
-[有趣的transformer(multi head)](http://skyhigh233.com/blog/2017/07/21/transformer/)
+[transformer结构理解（包括位置编码）](https://kexue.fm/archives/4765)  
+[有趣的transformer(multi head)](http://skyhigh233.com/blog/2017/07/21/transformer/)  
+[标准的transformer实现](https://www.jiqizhixin.com/articles/2018-11-06-10)  
 
 > 注意力就是一个加权和
 
