--- a/注意力机制.md
+++ b/注意力机制.md
@@ -2,7 +2,11 @@
 
 [transformer结构理解（包括位置编码）](https://kexue.fm/archives/4765)  
 [有趣的transformer(multi head)](http://skyhigh233.com/blog/2017/07/21/transformer/)  
-[标准的transformer实现](https://www.jiqizhixin.com/articles/2018-11-06-10)  
+[标准的transformer实现1](https://www.jianshu.com/p/eefe758fcb7a)  
+[标准的transformer实现2](https://www.jiqizhixin.com/articles/2018-11-06-10)  
+[标准的transformer实现3](https://zhuanlan.zhihu.com/p/48731949)  
+[标准的transformer实现3](https://www.dazhuanlan.com/2019/11/08/5dc4b227111e2/)  
+[标准的transformer实现5](https://luozhouyang.github.io/transformer/)  
 
 > 注意力就是一个加权和
 
