--- a/注意力机制.md
+++ b/注意力机制.md
@@ -5,7 +5,7 @@
 [标准的transformer实现1](https://www.jianshu.com/p/eefe758fcb7a)  
 [标准的transformer实现2](https://www.jiqizhixin.com/articles/2018-11-06-10)  
 [标准的transformer实现3](https://zhuanlan.zhihu.com/p/48731949)  
-[标准的transformer实现3](https://www.dazhuanlan.com/2019/11/08/5dc4b227111e2/)  
+[标准的transformer实现4，含infer逻辑](https://www.dazhuanlan.com/2019/11/08/5dc4b227111e2/)  
 [标准的transformer实现5](https://luozhouyang.github.io/transformer/)  
 
 > 注意力就是一个加权和
